--- a/app/globals.css
+++ b/app/globals.css
@@ -151,3 +151,13 @@
     transform: translateY(calc(-100% - var(--gap)));
   }
 }
+
+@keyframes border-beam {
+  100% {
+    offset-distance: 100%;
+  }
+}
+
+.animate-border-beam {
+  animation: border-beam calc(var(--duration)*1s) infinite linear;
+}
