--- a/app/globals.css
+++ b/app/globals.css
@@ -175,3 +175,17 @@
 .animate-shimmer {
   animation: shimmer 2s linear infinite;
 }
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+
+.animate-scroll {
+  animation: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+}
+
+.scroller:hover .animate-scroll {
+  animation-play-state: paused;
+}
